# hangmanpy

./: .gitpod.yml  README.md  hangman_frames.txt  main.py  setup.cfg
src/hangmanpy/: __main__.py
words/: words1.txt
