[metadata]
name = hangmanpy-yauchupython
version = 0.0.1
author = YaUchuPython
author_email = stasyuktemp@gmail.com
description = A small hangman game
url = https://github.com/yauchupython/hangmanpy
project_urls =
    Bug Tracker = https://github.com/yauchupython/hangmanpy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src